--- a/mobile/src/main/res/values/styles.xml
+++ b/mobile/src/main/res/values/styles.xml
@@ -3,29 +3,70 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your theme here. -->
+    <style name="BaseThemeLight" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="popupTheme">@style/PopupTheme</item>
+
+    </style>
+
+    <style name="BaseThemeDark" parent="Theme.AppCompat.NoActionBar">
+        <item name="popupTheme">@style/PopupTheme</item>
+
+    </style>
+
+    <style name="AppThemeLight" parent="BaseThemeLight">
+        <item name="android:windowContentOverlay">@null</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:textColorPrimary">@color/black_effective</item>
+        <item name="android:textColor">@color/black_effective</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:typeface">sans</item>
+        <item name="android:textAppearance">@style/TextAppearance.Text.Regular</item>
+        <item name="android:homeAsUpIndicator">@drawable/ic_arrow_back_white_24px</item>
+        <item name="android:fitsSystemWindows">true</item>
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="popupTheme">@style/PopupTheme</item>
     </style>
 
-    <style name="AppTheme.Dark" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="AppThemeDark" parent="BaseThemeDark">
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:textColorPrimary">@color/black_effective</item>
+        <item name="android:textColor">@color/black_effective</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:typeface">sans</item>
+        <item name="android:textAppearance">@style/TextAppearance.Text.Regular</item>
+        <item name="android:homeAsUpIndicator">@drawable/ic_arrow_back_white_24px</item>
+        <item name="android:fitsSystemWindows">true</item>
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="popupTheme">@style/PopupTheme</item>
+    </style>
 
+    <!-- Setting Screen Theme. -->
+    <style name="SettingThemeLight" parent="AppThemeLight">
+        <item name="android:windowActionBar">true</item>
+        <item name="android:windowNoTitle">false</item>
+    </style>
+
+    <!-- Setting Screen Theme. -->
+    <style name="SettingThemeDark" parent="AppThemeDark">
+        <item name="android:windowActionBar">true</item>
+        <item name="android:windowNoTitle">false</item>
     </style>
 
     <!-- Full Screen theme. -->
-    <style name="AppThemeFullScreen" parent="AppTheme">
+    <style name="AppThemeFullScreen" parent="AppThemeLight">
         <item name="colorPrimary">@color/white</item>
         <item name="colorPrimaryDark">@color/white</item>
         <item name="android:windowBackground">@color/white</item>
     </style>
-
-    <!-- Splash Screen theme. -->
-    <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
-        <item name="android:windowBackground">@drawable/splash_background</item>
-    </style>
-
 
     <style name="AppCompatAlertDialogStyle" parent="Theme.AppCompat.Light.Dialog.Alert">
         <item name="colorAccent">#5fa3d0</item>
@@ -37,22 +78,19 @@
         <item name="android:textSize">15sp</item>
     </style>
 
-    <style name="ToolbarTheme" parent="AppTheme">
+    <!-- Splash Screen theme. -->
+    <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowBackground">@drawable/splash_background</item>
+    </style>
+
+    <style name="ToolbarTheme" parent="AppThemeLight">
         <item name="android:textColorPrimary">@android:color/white</item>
         <item name="android:textColorSecondary">@android:color/white</item>
         <item name="colorControlActivated">@android:color/white</item>
     </style>
 
-    <style name="BlueTheme" parent="AppTheme">
-        <item name="colorPrimary">@color/blue</item>
-        <item name="colorPrimaryDark">@color/dark_blue</item>
-        <item name="colorAccent">@color/accent_blue</item>
-    </style>
-
-    <style name="BlueGreyTheme" parent="AppTheme.Dark">
-        <item name="colorPrimary">@color/blue_grey</item>
-        <item name="colorPrimaryDark">@color/dark_blue_grey</item>
-        <item name="colorAccent">@color/accent_blue_grey</item>
+    <style name="PopupTheme" parent="AppThemeDark">
+        <item name="android:textColor">@android:color/black</item>
     </style>
 
     <style name="Widget.CardContent" parent="android:Widget">
@@ -106,7 +144,6 @@
         <item name="android:textAppearance">@style/TextAppearance.Text.Italic</item>
     </style>
 
-
     <style name="Button" parent="Widget.AppCompat.Button">
         <item name="android:textColor">@color/black_effective</item>
         <item name="android:layout_height">48dp</item>
@@ -118,7 +155,6 @@
         <item name="android:background">@drawable/button_bg</item>
         <item name="android:foreground">?selectableItemBackground</item>
     </style>
-
 
     <style name="Button.Primary" parent="Button">
         <item name="android:textColor">@color/white</item>
@@ -135,6 +171,5 @@
         <item name="android:textAllCaps">true</item>
         <item name="android:background">@drawable/button_primary_bg</item>
     </style>
-
 
 </resources>
