--- a/mobile/src/leads/res/layout/activity_main.xml
+++ b/mobile/src/leads/res/layout/activity_main.xml
@@ -46,5 +46,5 @@
         app:itemBackground="@color/colorPrimary"
         app:itemIconTint="@color/white"
         app:itemTextColor="@color/white"
-        app:menu="@menu/bottom_navigation_main" />
+        app:menu="@menu/bottom_main" />
 </android.support.design.widget.CoordinatorLayout>
