--- a/mobile/src/main/res/layout/activity_login.xml
+++ b/mobile/src/main/res/layout/activity_login.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:gravity="center"
     android:orientation="vertical"
     android:padding="10dp"
     tools:context=".ui.activities.login.LoginActivity">
 
-    <ImageView android:src="@drawable/reidx_48dp"
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="72dp"
+        android:layout_gravity="center_horizontal"
         android:layout_marginBottom="36dp"
-        android:layout_gravity="center_horizontal" />
+        android:src="@drawable/reidx_48dp"/>
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -20,12 +23,13 @@
         android:layout_gravity="center"
         android:orientation="vertical"
         android:paddingLeft="20dp"
-        android:paddingRight="20dp" >
+        android:paddingRight="20dp">
 
         <!--  Email Label -->
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <EditText
                 android:id="@+id/loginEmailEdt"
                 android:layout_width="match_parent"
@@ -34,13 +38,14 @@
                 android:hint="@string/hint_email"
                 android:inputType="textEmailAddress"
                 android:textColor="@android:color/black"
-                android:textColorHint="@android:color/black" />
+                android:textColorHint="@android:color/black"/>
         </android.support.design.widget.TextInputLayout>
 
         <!--  Password Label -->
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <EditText
                 android:id="@+id/loginPasswordEdt"
                 android:layout_width="fill_parent"
@@ -49,7 +54,7 @@
                 android:hint="@string/hint_password"
                 android:inputType="textPassword"
                 android:textColor="@android:color/black"
-                android:textColorHint="@android:color/black" />
+                android:textColorHint="@android:color/black"/>
         </android.support.design.widget.TextInputLayout>
 
         <!-- Login Button -->
@@ -57,8 +62,8 @@
             android:id="@+id/loginBtn"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
             android:layout_marginBottom="24dp"
+            android:layout_marginTop="24dp"
             android:padding="12dp"
             android:text="@string/button_login"/>
 
@@ -69,7 +74,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text="@string/textview_forgot_password"
-            android:textStyle="bold" />
+            android:textStyle="bold"/>
 
     </LinearLayout>
 </LinearLayout>
