--- a/mobile/src/main/res/layout/activity_reset.xml
+++ b/mobile/src/main/res/layout/activity_reset.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:gravity="center"
     android:orientation="vertical"
     android:padding="10dp"
     tools:context=".ui.activities.reset.ResetActivity">
 
-    <ImageView android:src="@drawable/reidx_48dp"
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="72dp"
+        android:layout_gravity="center_horizontal"
         android:layout_marginBottom="36dp"
-        android:layout_gravity="center_horizontal" />
+        android:src="@drawable/reidx_48dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -21,7 +24,7 @@
         android:padding="10dp"
         android:text="@string/textview_forgot_password"
         android:textColor="@android:color/black"
-        android:textSize="20sp" />
+        android:textSize="20sp"/>
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -44,15 +47,15 @@
                 android:hint="@string/hint_email"
                 android:inputType="textEmailAddress"
                 android:textColor="@android:color/white"
-                android:textColorHint="@android:color/black" />
+                android:textColorHint="@android:color/black"/>
         </android.support.design.widget.TextInputLayout>
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/resetPasswordBtn"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
             android:layout_marginBottom="24dp"
+            android:layout_marginTop="24dp"
             android:padding="12dp"
             android:text="@string/button_reset_password"/>
 
@@ -72,5 +75,6 @@
         android:layout_height="30dp"
         android:layout_gravity="center|bottom"
         android:layout_marginBottom="20dp"
-        android:visibility="gone" />
-</LinearLayout>
+        android:visibility="gone"/>
+
+</android.support.design.widget.CoordinatorLayout>
