--- a/mobile/src/main/res/layout/activity_search.xml
+++ b/mobile/src/main/res/layout/activity_search.xml
@@ -1,21 +1,24 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activityTest.SearchActivity" >
+    tools:context=".ui.activities.search.SearchActivity">
 
     <SearchView
         android:id="@+id/search"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="true"/>
 
     <ExpandableListView
         android:id="@+id/expandableList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/search" >
+        android:layout_below="@+id/search">
     </ExpandableListView>
 
-</RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
