--- a/mobile/src/main/res/layout/activity_settings.xml
+++ b/mobile/src/main/res/layout/activity_settings.xml
@@ -1,14 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <include layout="@layout/toolbar_layout" />
+    android:layout_height="match_parent"
+    tools:context=".ui.activities.settings.SettingsActivity">
+
+    <include layout="@layout/toolbar_layout"/>
+
+    <include layout="@layout/toolbar_shadow_layout"/>
+
     <FrameLayout
         android:id="@+id/fragment_content"
-        android:background="@color/window_background"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <include layout="@layout/toolbar_shadow_layout"/>
+        android:layout_height="match_parent"
+        android:background="@color/window_background">
+
     </FrameLayout>
-</LinearLayout>
+
+</android.support.design.widget.CoordinatorLayout>
