--- a/mobile/src/main/res/layout/header.xml
+++ b/mobile/src/main/res/layout/header.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="178dp"
     android:background="@android:color/holo_blue_light"
@@ -9,18 +11,18 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="56dp"
-        android:orientation="vertical"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
-            android:textColor="#ffffff"
             android:text="Brian Donaldson"
+            android:textColor="#ffffff"
             android:textSize="14sp"
             android:textStyle="bold"
             />
@@ -29,10 +31,10 @@
             android:id="@+id/email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#ffffff"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="5dp"
             android:text="bdonaldsca@gmail.com"
+            android:textColor="#ffffff"
             android:textSize="14sp"
             android:textStyle="normal"
 
@@ -40,10 +42,10 @@
     </LinearLayout>
 
     <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/circleView"
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="38dp"
-        android:id="@+id/circleView"
-        />
+        android:layout_marginTop="38dp"/>
+
 </RelativeLayout>
