--- a/mobile/src/main/res/layout/item_empty_view.xml
+++ b/mobile/src/main/res/layout/item_empty_view.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:id="@+id/linearLayoutView"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:gravity="center"
-              android:orientation="vertical">
+
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/linearLayoutView"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/imageViewEmpty"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_gravity="center"
-        app:srcCompat="@drawable/ic_rabbit" />
+        app:srcCompat="@drawable/ic_rabbit"/>
 
     <TextView
         android:id="@+id/tv_message"
@@ -23,7 +25,7 @@
         android:layout_marginTop="16dp"
         android:gravity="center"
         android:text="@string/empty_screen"
-        android:textColor="@color/gray" />
+        android:textColor="@color/gray"/>
 
     <TextView
         style="@style/TextStyle.Title"
@@ -32,7 +34,7 @@
         android:layout_gravity="center"
         android:layout_marginTop="30dp"
         android:text="@string/please_retry"
-        android:textColor="@color/gray" />
+        android:textColor="@color/gray"/>
 
     <Button
         android:id="@+id/btn_retry"
@@ -42,5 +44,5 @@
         android:layout_gravity="center"
         android:layout_marginTop="16dp"
         android:text="@string/retry"
-        android:textSize="20sp" />
+        android:textSize="20sp"/>
 </LinearLayout>
