--- a/mobile/src/main/res/layout/item_tenant.xml
+++ b/mobile/src/main/res/layout/item_tenant.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -23,16 +24,16 @@
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginTop="16dp"
-            android:src="@drawable/contact_icon" />
+            android:src="@drawable/contact_icon"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginRight="10dp"
+            android:layout_weight="0.46"
             android:gravity="left"
-            android:orientation="vertical"
-            android:layout_weight="0.46">
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/tenantFirstLastName"
@@ -41,7 +42,7 @@
                 android:maxLines="1"
                 android:textAppearance="@style/TextAppearance.AppCompat.Subhead.Inverse"
                 android:textColor="@color/md_text"
-                tools:text="Brian Donaldson" />
+                tools:text="Brian Donaldson"/>
 
             <TextView
                 android:id="@+id/tenantEmail"
@@ -50,7 +51,7 @@
                 android:maxLines="1"
                 android:textAppearance="@style/TextAppearance.AppCompat.Subhead.Inverse"
                 android:textColor="@color/md_text"
-                tools:text="donaldson_brian@hotmail.com" />
+                tools:text="donaldson_brian@hotmail.com"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -62,24 +63,24 @@
                     android:id="@+id/tenantHomePhone"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:inputType="phone"
                     android:maxLines="1"
                     android:textAppearance="@style/TextAppearance.AppCompat.Subhead.Inverse"
                     android:textColor="@color/md_text"
-                    android:inputType="phone"
-                    tools:text="416-093-4343" />
+                    tools:text="416-093-4343"/>
 
                 <EditText
                     android:id="@+id/tenantCellPhone"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:inputType="phone"
                     android:maxLines="1"
                     android:textAppearance="@style/TextAppearance.AppCompat.Subhead.Inverse"
                     android:textColor="@color/md_text"
-                    android:inputType="phone"
-                    tools:text="647-843-9578"
-                    android:layout_marginLeft="10dp" />
+                    tools:text="647-843-9578"/>
             </LinearLayout>
-			
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -90,24 +91,24 @@
                     android:id="@+id/tenantIncome"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:linksClickable="false"
+                    android:longClickable="false"
                     android:maxLines="1"
                     android:textAppearance="@style/TextAppearance.AppCompat.Subhead.Inverse"
                     android:textColor="@color/md_text"
-                    android:linksClickable="false"
-                    android:longClickable="false"
-				    tools:text="$120,000"/>
+                    tools:text="$120,000"/>
 
                 <TextView
                     android:id="@+id/tenantDeposit"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="45dp"
+                    android:linksClickable="false"
+                    android:longClickable="false"
                     android:maxLines="1"
                     android:textAppearance="@style/TextAppearance.AppCompat.Subhead.Inverse"
                     android:textColor="@color/md_text"
-                    android:linksClickable="false"
-                    android:longClickable="false"
-                    android:layout_marginLeft="45dp" 
-					tools:text="$10,000"/>
+                    tools:text="$10,000"/>
             </LinearLayout>
 
         </LinearLayout>
@@ -117,10 +118,11 @@
             android:layout_width="40dp"
             android:layout_height="match_parent"
             android:layout_marginBottom="16dp"
+            android:layout_marginLeft="75dp"
             android:layout_marginTop="16dp"
-            android:src="@drawable/ic_action_overflow"
-            android:layout_marginLeft="75dp" />
+            android:src="@drawable/ic_action_overflow"/>
 
     </LinearLayout>
+
 </LinearLayout>
 
