--- a/mobile/src/main/res/xml/settings.xml
+++ b/mobile/src/main/res/xml/settings.xml
@@ -3,32 +3,32 @@
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android">
     <PreferenceCategory
-        android:title="@string/title_fonts_appearances" >
+        android:title="@string/title_fonts_appearances">
         <ListPreference
-            android:title="@string/theme_title_change"
+            android:defaultValue="Black"
             android:dialogTitle="@string/theme_title_list_dialog"
-            android:summary="@string/theme_summary"
             android:entries="@array/entries_list_preference"
             android:entryValues="@array/entry_values_list_preference"
-            android:defaultValue="Black"
-            android:key="AppTheme"/>
+            android:key="AppTheme"
+            android:summary="@string/theme_summary"
+            android:title="@string/theme_title_change"/>
     </PreferenceCategory>
 
     <PreferenceCategory
         android:title="@string/title_wifi_data">
         <SwitchPreference
-            android:title="@string/data_title"
-            android:summaryOn="@string/data_summary_on"
-            android:summaryOff="@string/data_summary_off"
             android:defaultValue="false"
-            android:key="WiFi"/>
+            android:key="WiFi"
+            android:summaryOff="@string/data_summary_off"
+            android:summaryOn="@string/data_summary_on"
+            android:title="@string/data_title"/>
     </PreferenceCategory>
 
     <PreferenceCategory
-        android:title="@string/title_notifications" >
+        android:title="@string/title_notifications">
         <Preference
-            android:title="@string/about_title"
-            android:summary="@string/about_summary">
+            android:summary="@string/about_summary"
+            android:title="@string/about_title">
             <intent android:action="com.ibm.clientcenters.activities.ActivityAbout"/>
         </Preference>
     </PreferenceCategory>
