--- a/mobile/src/main/res/layout/fragment_dashboard.xml
+++ b/mobile/src/main/res/layout/fragment_dashboard.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.design.widget.CoordinatorLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tab_layout"
+        style="@style/AppTab"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
         app:tabGravity="fill"
-        app:tabIndicatorColor="@color/white"/>
+        app:tabIndicatorColor="@color/white" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/feed_view_pager"
@@ -21,4 +23,4 @@
         android:background="@color/white"
         android:clipToPadding="false"/>
 
-</android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
